--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 .currency{
     text-align: center;
     margin: 20px auto;
-    padding: 15px;
+    padding: 15px 15px;
     /* width: 800px; */
 }
 .currency .headTitle{
@@ -22,7 +22,8 @@
     background-color: #eee;
     font-size: 32px;
     padding: 10px;
-    width: 320px;
+    /* margin: 20px auto; */
+    max-width: 300px;
 }
 .select2{
     padding: 10px 30px;
@@ -38,6 +39,9 @@
         margin: auto;
     }
     .select2{
+        margin: auto;
+    }
+    .numTo{
         margin: auto;
     }
 }
